marco-themes: Add Aldabara and Glider
These themes used to be part of MATE many years ago and were removed
since they were no longer compatible. This patch brings them back fixed
as window decorations (metacity themes).

--- a/marco-themes/Makefile.am
+++ b/marco-themes/Makefile.am
@@ -2,7 +2,9 @@ THEMES = \
 	Shiny \
 	Quid \
 	HighContrast \
-	Fog
+	Glider \
+	Fog \
+	Aldabra
 
 THEME_DIR=$(datadir)/themes
 THEME_SUBDIR=metacity-1
